--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Authors@R: c(person(given = "You",
                     role = c("aut"),
                     email = "kathi.zarnack at bmls.de",
                     comment = c(ORCID = "0000-0003-3527-3378")))
+Maintainer: You Zhou <youzhoulearning@gmail.com>
 Description: This package can help user to run the m6Aboost model on their own
     miCLIP2 data. The package includes functions to assign the 
     read counts and get the features to run the m6Aboost model. More details 
