--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,5 @@ importFrom(Biostrings,getSeq)
 importFrom(S4Vectors,elementMetadata)
 importFrom(S4Vectors,mcols)
 importFrom(rtracklayer,import.bw)
+importFrom(rtracklayer,import.gff3)
 importFrom(utils,globalVariables)
