--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CtoTAssignment)
 export(m6Aboost)
 export(preparingData)
 export(truncationAssignment)
+import(AnnotationHub)
 import(ExperimentHub)
 import(GenomicRanges)
 import(IRanges, except = c(collapse, slice, desc))
