--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: m6Aboost
 Type: Package
 Title: m6Aboost
-Version: 0.99.5
+Version: 0.99.6
 Date: 2021-02-25
 Authors@R: c(person(given = "You",
                     family = "Zhou",
@@ -32,4 +32,5 @@ Imports:
 Depends: 
     S4Vectors, adabag, GenomicRanges, R (>= 4.1)
 Suggests: 
-    knitr, rmarkdown, bookdown, testthat, BiocStyle, BSgenome.Mmusculus.UCSC.mm10
+    knitr, rmarkdown, bookdown, testthat, BiocStyle, 
+    BSgenome.Mmusculus.UCSC.mm10
